# MandelbrotFractal-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/DebugTools/: DebugTools.cpp  DebugTools.h
src/Fractal/: Config.h  FractalCalcMethods.cpp  FractalCalcMethods.h  MandelbrotFractal.cpp  MandelbrotFractal.h  TaskIterators.h  Zoomer.cpp  Zoomer.h
src/Multithreading/: ThreadPool.h  ThreadPoolInstance.h
src/Utility/: Functions.h  Types.cpp  Types.h
